--- a/appspec.yml
+++ b/appspec.yml
@@ -6,10 +6,10 @@ files:
     destination: /home/ubuntu/mini-todo
 
 hooks:
-  AfterInstall:
+  Install:
     - location: scripts/install.sh
       timeout: 300
-      runas: ubuntu
+      runas: root
 
   ApplicationStart:
     - location: scripts/start.sh
