--- a/appspec.yml
+++ b/appspec.yml
@@ -4,7 +4,7 @@ os: linux
 files:
   - source: /
     destination: /home/ubuntu/mini-todo
-    overwrite: true   # <-- Added to overwrite existing files
+    overwrite: true
 
 hooks:
   BeforeInstall:
@@ -12,10 +12,10 @@ hooks:
       timeout: 300
       runas: ubuntu
 
-  Install:
+  AfterInstall:
     - location: scripts/install.sh
       timeout: 300
-      runas: root
+      runas: ubuntu
 
   ApplicationStart:
     - location: scripts/start.sh
